--- a/views/lcpro.ejs
+++ b/views/lcpro.ejs
@@ -2,7 +2,7 @@
 
 <% include partials/headernav %>
 <% include partials/preloader %>
-<% include partials/mainslider %>
+<% include partials/LCPRO/slider %>
 <% include partials/LCPRO/section1 %>
 <% include partials/comparison %>
 <% include partials/footer %>
