--- a/views/partials/bottlesUV/sliderUV.ejs
+++ b/views/partials/bottlesUV/sliderUV.ejs
@@ -1,4 +1,4 @@
-<section id="slider3" class="anim-slider anim-slider_single-slide" data-stellar-background-ratio="5">
+<section id="slider3" class="anim-slider anim-slider_single-slide">
     <div class="content-wrapper">
       <figure>
         <img src="img/imagepac3Dlogo.png" alt="logo">
