--- a/views/partials/mainslider.ejs
+++ b/views/partials/mainslider.ejs
@@ -1,4 +1,4 @@
-<div class="slider">
+<div class="slider" id="slider">
     			<ul class="anim-slider">
     				<li id="slider1" class="anim-slide">
     					<div class="content-wrapper">
