--- a/public/css/maxwidth768.css
+++ b/public/css/maxwidth768.css
@@ -29,6 +29,11 @@
       color: white;
       line-height: 100%;
       margin-bottom: 1%; }
+    .nav__menu-item .fa-shopping-bag {
+      position: absolute;
+      top: 10%;
+      right: 5.5%;
+      color: white; }
   .nav__menu-item-active {
     -webkit-transition: 1s;
     transition: 1s;
@@ -38,13 +43,13 @@
   .nav__submenu-ind,
   .nav__submenu-product {
     position: fixed;
-    top: 8%;
-    right: 15%;
+    top: 0;
+    right: 0;
     left: initial;
-    height: auto;
+    height: 100%;
     padding: 10px;
+    padding-right: 15%;
     width: auto;
-    border-radius: 10px;
     -webkit-box-shadow: 0px 1px 7px #646464;
             box-shadow: 0px 1px 7px #646464; }
     .nav__submenu-ind li,
@@ -55,6 +60,9 @@
     .nav__submenu-ind figcaption,
     .nav__submenu-product figcaption {
       font-size: 12px; }
+    .nav__submenu-ind img,
+    .nav__submenu-product img {
+      height: 8vh; }
   .nav__submenu-ind {
     background-color: #f0f0f0; }
   .slider {
@@ -62,11 +70,12 @@
     height: 100vh; }
   .anim-slider {
     position: relative;
+    background-position: right;
     width: 100%;
     height: 100vh;
     min-height: initial; }
     .anim-slider .content-wrapper {
-      padding: 0px 5%;
+      padding: 11vh 5%;
       margin: 0 auto; }
   .anim-slide {
     height: 100vh; }
@@ -75,10 +84,12 @@
   .content-wrapper {
     width: 100%;
     height: 100%;
-    background-color: rgba(250, 250, 250, 0.7); }
+    background-color: rgba(150, 150, 150, 0.7);
+    color: white; }
     .content-wrapper h1 {
-      color: #454545;
-      font-size: 5vh; }
+      font-size: 5vh;
+      margin-top: 0px;
+      color: inherit; }
     .content-wrapper p {
       font-size: 18px; }
     .content-wrapper img {
@@ -88,20 +99,14 @@
       font-size: 20px; }
     .content-wrapper .btn {
       margin-top: 40px;
-      background-color: #ececec; }
-  #slider1 h1 {
-    margin-top: 25vh; }
-  #slider2 figure {
-    margin-top: 6vh; }
+      background-color: #ececec;
+      color: black; }
   #slider2 button {
     margin-top: 8vh; }
-  #slider3 h1 {
-    margin-top: 25vh; }
   #slider3 button {
     margin-top: 3vh;
     margin-bottom: 0; }
   #slider4 figure {
-    margin-top: 15vh;
     margin-bottom: 0vh; }
   #slider4 h1 {
     margin-bottom: 5vh; }
@@ -127,5 +132,17 @@
   .purchase .btn {
     margin: 15px auto;
     display: block; }
-  .product-resins .pruduct__image {
-    text-align: center; } }
+  .product__image {
+    padding: 40px 0; }
+    .product__image img {
+      display: block;
+      margin: 0 auto;
+      width: 80%; }
+  .product h1 {
+    padding: 0; }
+  .cart {
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: 20000;
+    padding: 3px; } }
