--- a/views/lchr.ejs
+++ b/views/lchr.ejs
@@ -2,7 +2,7 @@
 
 <% include partials/headernav %>
 <% include partials/preloader %>
-<% include partials/mainslider %>
+<% include partials/LCHR/slider %>
 <% include partials/LCHR/section1 %>
 <% include partials/comparison %>
 <% include partials/footer %>
