--- a/views/partials/cart.ejs
+++ b/views/partials/cart.ejs
@@ -1,16 +1,18 @@
 <script id="entry-template" type="text/x-handlebars-template">
   <div class="cart animated fadeInRight">
     {{#if empty}}
-      <div class="row">В корзине нет товаров</div>
+      <div class="row">
+        <div class="col-xs-12">В корзине нет товаров</div>
+      </div>
     {{else}}
       {{#each items}}
           <div class="row cart__item">
-            <div class="col-md-5 col-xs-12">{{item}}</div>
-            <div class="col-md-3 col-xs-12">
+            <div class="col-md-5 col-xs-5">{{item}}</div>
+            <div class="col-md-3 col-xs-4">
               <input type="number" value="{{qty}}" min="1" max="99">
               <span>шт</span>
             </div>
-            <div class="col-md-2 col-xs-12">{{price}}<span>$</span></div>
+            <div class="col-md-2 col-xs-2">{{price}}<span>$</span></div>
             <div class="col-md-2 col-xs-12">
               <button class="product-delete" data-id="{{@key}}"><span class="fa fa-minus-square"></span></button>
             </div>
