--- a/public/css/main_style.css
+++ b/public/css/main_style.css
@@ -77,8 +77,10 @@ table {
     padding: 0; }
   .cart input {
     width: 3em; }
-  .cart .fa-refresh {
-    display: none; }
+
+.cart-refresh {
+  display: none;
+  font-size: 22px; }
 
 .cart__order {
   width: 100%; }
@@ -631,9 +633,13 @@ footer {
     margin-bottom: 20px; }
 
 .product__image img {
+  opacity: 0;
   width: 100%;
   max-width: 600px;
   float: right; }
+
+.product-resins .product__image img {
+  float: left; }
 
 .product {
   padding: 50px 0; }
@@ -694,8 +700,7 @@ footer {
 
 .product__image img {
   max-width: none;
-  width: auto;
-  float: none; }
+  width: auto; }
 
 .specifications-wrapper .caption, .specifications-wrapper .content-wrapper h1, .content-wrapper .specifications-wrapper h1, .specifications-wrapper .concept__caption, .specifications-wrapper .products figcaption, .products .specifications-wrapper figcaption, .specifications-wrapper .daypolymer h1, .daypolymer .specifications-wrapper h1, .specifications-wrapper .uvpolymer h1, .uvpolymer .specifications-wrapper h1, .specifications-wrapper .product__article h2, .product__article .specifications-wrapper h2, .specifications-wrapper .product h1, .product .specifications-wrapper h1, .specifications-wrapper .product h3, .product .specifications-wrapper h3, .specifications-wrapper .comparison caption, .comparison .specifications-wrapper caption {
   margin: 20px 0; }
@@ -745,6 +750,15 @@ footer {
 .slider > .content-wrapper {
   top: -69px; }
 
+.tcon-indicator {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  position: fixed;
+  bottom: 10px;
+  right: 10px; }
+  .tcon-indicator path {
+    color: blue; }
+
 @media all and (max-width: 767px) {
   .container {
     width: 80%;
@@ -777,10 +791,10 @@ footer {
       line-height: 100%;
       margin-bottom: 1%; }
     .nav__menu-item .fa-shopping-bag {
-      position: absolute;
-      top: 10%;
-      right: 5.5%;
-      color: white; }
+      position: fixed;
+      bottom: 11%;
+      right: 5%;
+      font-size: 30px; }
   .nav__menu-item-active {
     -webkit-transition: 1s;
     transition: 1s;
@@ -831,8 +845,9 @@ footer {
   .content-wrapper {
     width: 100%;
     height: 100%;
-    background-color: rgba(150, 150, 150, 0.7);
-    color: white; }
+    color: white;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.22)), color-stop(39%, rgba(0, 0, 0, 0.22)), to(transparent));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.22) 0%, rgba(0, 0, 0, 0.22) 39%, transparent 100%); }
     .content-wrapper h1 {
       font-size: 5vh;
       margin-top: 0px;
@@ -880,11 +895,22 @@ footer {
     margin: 15px auto;
     display: block; }
   .product__image {
-    padding: 40px 0; }
+    padding: 40px 0;
+    margin: 0 auto; }
     .product__image img {
+      opacity: 1;
       display: block;
       margin: 0 auto;
-      width: 80%; }
+      width: 50%;
+      float: none; }
+    .product__image .product__image-wrapper {
+      margin: 0 auto;
+      width: 100%; }
+  .product-resins .product__image img {
+    float: none;
+    max-width: 120px; }
+  .products__wrapper {
+    opacity: 1; }
   .product h1 {
     padding: 0; }
   .cart {
@@ -892,7 +918,10 @@ footer {
     width: 100%;
     height: 100%;
     z-index: 20000;
-    padding: 3px; } }
+    padding: 3px; }
+    .cart .fa-minus-square {
+      font-size: 30px;
+      color: #818181; } }
 
 @media all and (max-width: 991px) {
   .nav__menu-list {
@@ -930,8 +959,7 @@ footer {
       font-size: 20px; }
     .content-wrapper .btn {
       margin-top: 40px;
-      background-color: #ececec;
-      color: black; }
+      background-color: #ececec; }
   .product__adventages h3 {
     padding: 10px 0; }
   .product__adventages img {
