--- a/public/css/maxwidth768.css
+++ b/public/css/maxwidth768.css
@@ -30,10 +30,10 @@
       line-height: 100%;
       margin-bottom: 1%; }
     .nav__menu-item .fa-shopping-bag {
-      position: absolute;
-      top: 10%;
-      right: 5.5%;
-      color: white; }
+      position: fixed;
+      bottom: 11%;
+      right: 5%;
+      font-size: 30px; }
   .nav__menu-item-active {
     -webkit-transition: 1s;
     transition: 1s;
@@ -84,8 +84,9 @@
   .content-wrapper {
     width: 100%;
     height: 100%;
-    background-color: rgba(150, 150, 150, 0.7);
-    color: white; }
+    color: white;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.22)), color-stop(39%, rgba(0, 0, 0, 0.22)), to(transparent));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.22) 0%, rgba(0, 0, 0, 0.22) 39%, transparent 100%); }
     .content-wrapper h1 {
       font-size: 5vh;
       margin-top: 0px;
@@ -133,11 +134,22 @@
     margin: 15px auto;
     display: block; }
   .product__image {
-    padding: 40px 0; }
+    padding: 40px 0;
+    margin: 0 auto; }
     .product__image img {
+      opacity: 1;
       display: block;
       margin: 0 auto;
-      width: 80%; }
+      width: 50%;
+      float: none; }
+    .product__image .product__image-wrapper {
+      margin: 0 auto;
+      width: 100%; }
+  .product-resins .product__image img {
+    float: none;
+    max-width: 120px; }
+  .products__wrapper {
+    opacity: 1; }
   .product h1 {
     padding: 0; }
   .cart {
@@ -145,4 +157,7 @@
     width: 100%;
     height: 100%;
     z-index: 20000;
-    padding: 3px; } }
+    padding: 3px; }
+    .cart .fa-minus-square {
+      font-size: 30px;
+      color: #818181; } }
