--- a/public/css/maxwidth991.css
+++ b/public/css/maxwidth991.css
@@ -34,8 +34,7 @@
       font-size: 20px; }
     .content-wrapper .btn {
       margin-top: 40px;
-      background-color: #ececec;
-      color: black; }
+      background-color: #ececec; }
   .product__adventages h3 {
     padding: 10px 0; }
   .product__adventages img {
