--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/transicons.css">
     </head>
     <body>
+    <div id="top"></div>
     <div class="cart_wrapper"></div>
         <% include ../partials/cart.ejs %> 
         <%- body %>
