--- a/views/partials/bottlesUV/section.ejs
+++ b/views/partials/bottlesUV/section.ejs
@@ -1,7 +1,7 @@
 <% products.forEach(function(product) { %>
   <div class="container">
     <div class="row">
-      <div class="product__image col-sm-4">
+      <div class="product__image col-md-4 col-sm-12">
         <img src="img/daylight/<%= product.mainImage %>" alt="<%= product.name %>">
       </div>
       <div class="product__wrapper col-sm-8">
