--- a/views/partials/headernav.ejs
+++ b/views/partials/headernav.ejs
@@ -1,4 +1,4 @@
-<header class="nav-down">
+<header id="header" class="nav-down">
 
             <div class="container">
                 <div class="logo">
@@ -12,13 +12,16 @@
                                 <span class="tcon-menu__lines" aria-hidden="true"></span>
                                 <span class="tcon-visuallyhidden">toggle menu</span>
                         </button>
-                        <!-- <span class="tcon-indicator" aria-label="scroll" aria-hidden="true">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="tcon-svgchevron" viewBox="0 0 30 36">
-                                    <path class="a3" d="M0,0l15,16L30,0"></path>
-                                    <path class="a2" d="M0,10l15,16l15-16"></path>
-                                    <path class="a1" d="M0,20l15,16l15-16"></path>
-                            </svg>
-                        </span> -->
+                        <a href="#top" rel="m_PageScroll2id">
+                           <span class="tcon-indicator" aria-label="scroll" aria-hidden="true">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="tcon-svgchevron" viewBox="0 0 30 36">
+                                        <path class="a3" d="M0,0l15,16L30,0"></path>
+                                        <path class="a2" d="M0,10l15,16l15-16"></path>
+                                        <path class="a1" d="M0,20l15,16l15-16"></path>
+                                </svg>
+                            </span> 
+                        </a>
+                        
                     <ul class="nav__menu-list">
                         <li class="nav__menu-item ">
                             <a href="#" class="nolink">Продукция</a>
