--- a/views/partials/LC10/slider.ejs
+++ b/views/partials/LC10/slider.ejs
@@ -5,6 +5,6 @@
 		</figure>
       	<h1 data-depth="0.8" id="h1">liquid crystal 10</h1>
       	<p>Our affordable medium format SLA printer providing you with high resolution and very simple use</p>
-      	<a href="#"><button class="btn animated pulse" data-effect="pulse">Купить</button></a>
+		<a href="#"><button class="btn" data-id="<%= printer._id %>">Купить</button></a>
     </div>
 </section>
