--- a/views/partials/cart.ejs
+++ b/views/partials/cart.ejs
@@ -1,5 +1,5 @@
 <script id="entry-template" type="text/x-handlebars-template">
-  <div class="cart animated fadeInRight">
+  <div class="cart animated fadeInUpBig">
     {{#if empty}}
       <div class="row">
         <div class="col-xs-12">В корзине нет товаров</div>
