--- a/views/partials/mainslider.ejs
+++ b/views/partials/mainslider.ejs
@@ -3,7 +3,7 @@
     				<li id="slider1" class="anim-slide">
     					<div class="content-wrapper">
     						<h1 id="h1">welcome to the next level</h1>
-    						<button class="btn animated pulse" data-effect="pulse">Узнать больше</button>
+    						<a href="/products/liquidcrystal10" class="animated"><button class="btn animated" data-effect="pulse">Узнать больше</button></a>
     					</div>
     				</li>
     				<li id="slider2" class="anim-slide">
@@ -14,14 +14,14 @@
     						</figure>
     						<h1>меняя подход к производству во всем мире</h1>
     						<p>build platform 470 x 240 x 340 mm <br>18.5" x 9.5" x 13.4 "inches</p>
-    						<button class="btn" data-effect="pulse">Узнать больше</button>
+    						<a href="/products/liquidcrystalPRO"><button class="btn" data-effect="pulse">Узнать больше</button></a>
     					</div>
     				</li>
     				<li id="slider3" class="anim-slide">
     					<div class="content-wrapper">
     						<h1> 3d фотополимерные материалы<br>for every manufacturer's machine</h1>
     						<p>Desktop, large lasers and DLP</p>
-    						<button class="btn">Узнать больше</button>
+    						<a href="/products/uvresins"><button class="btn">Узнать больше</button></a>
     					</div>
     				</li>
     				<li id="slider4" class="anim-slide">
@@ -32,7 +32,7 @@
     						<h1>daylight resins</h1>
     						<p>Manufacturer of unique range of visible light active photopolymers,<br> providing all the possible properties needed
     						</p>
-    						<button class="btn">Узнать больше</button>
+    						<a href="/products/daylightresins"><button class="btn">Узнать больше</button></a>
     					</div>
     				</li>
     				<nav class="anim-arrows">
