--- a/views/partials/headernav.ejs
+++ b/views/partials/headernav.ejs
@@ -22,11 +22,11 @@
                             </span> 
                         </a>
                         
-                    <ul class="nav__menu-list">
-                        <li class="nav__menu-item ">
+                    <ul class="nav__menu-list animated fadeOutUp">
+                        <li class="nav__menu-item item-products">
                             <a href="#" class="nolink">Продукция</a>
                         </li>
-                        <li class="nav__menu-item">
+                        <li class="nav__menu-item item-areause">
                             <a href="#" class="nolink">Сфера применения</a>
                         </li>
                         <li class="nav__menu-item">
@@ -35,58 +35,57 @@
                         <li class="nav__menu-item">
                             <a href="#">Магазин</a>
                         </li>
-                        <li class="nav__menu-item">
+                        <li class="nav__menu-item nav__item-bag">
                             <div class="fa fa-shopping-bag"><div class="bage animated pulse infinite"></div></div>
                         </li>
                     </ul>
 
-                    <ul class="nav__submenu-product">
-                        <li>
-                            <a href="/products/liquidcrystal10">
-                                <figure>
-                                    <img src="img/logo1-lchr.png" alt="logo" />
-                                    <figcaption>Liquid crystal 10''</figcaption>
+                    <ul class="nav__submenu-product animated fadeIn">
+                                <li>
+                                    <a href="/products/liquidcrystal10">
+                                        <figure>
+                                            <img src="img/logo1-lchr.png" alt="logo" />
+                                            <figcaption>Liquid crystal 10''</figcaption>
 
-                                </figure>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/products/liquidcrystalHr">
-                                <figure>
-                                    <img src="img/logo2-lchr.png" alt="logo" />
-                                    <figcaption>Liquid crystal HR</figcaption>
-                                </figure>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/products/liquidcrystalPro">
-                                <figure>
-                                    <img src="img/logo3-lc-pro.png" alt="logo" />
-                                    <figcaption>Liquid crystal PRO</figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/products/liquidcrystalHr">
+                                        <figure>
+                                            <img src="img/logo2-lchr.png" alt="logo" />
+                                            <figcaption>Liquid crystal HR</figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/products/liquidcrystalPro">
+                                        <figure>
+                                            <img src="img/logo3-lc-pro.png" alt="logo" />
+                                            <figcaption>Liquid crystal PRO</figcaption>
 
-                                </figure>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/products/uvresins">
-                                <figure>
-                                    <img src="img/logo4-UVresin.png" alt="logo" />
-                                    <figcaption>UV resins</figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/products/uvresins">
+                                        <figure>
+                                            <img src="img/logo4-UVresin.png" alt="logo" />
+                                            <figcaption>UV resins</figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/products/daylightresins">
+                                        <figure>
+                                            <img src="img/logo5-DAYLIGHT.png" alt="logo" />
+                                            <figcaption>daylight resins</figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                            </ul>
 
-                                </figure>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/products/daylightresins">
-                                <figure>
-                                    <img src="img/logo5-DAYLIGHT.png" alt="logo" />
-                                    <figcaption>daylight resins</figcaption>
-                                </figure>
-                            </a>
-                        </li>
-                    </ul>
-
-                    <ul class="nav__submenu-ind">
+                    <ul class="nav__submenu-ind animated fadeIn">
                         <li>
                             <a href="#">
                                 <figure>
