--- a/views/partials/headernav.ejs
+++ b/views/partials/headernav.ejs
@@ -22,7 +22,7 @@
                             </span> 
                         </a>
                         
-                    <ul class="nav__menu-list animated fadeOutUp">
+                    <ul class="nav__menu-list animated">
                         <li class="nav__menu-item item-products">
                             <a href="#" class="nolink">Продукция</a>
                         </li>
