--- a/src/sass/_cart.sass
+++ b/src/sass/_cart.sass
@@ -4,7 +4,7 @@
 	position: fixed
 	right: 0px
 	top: 70px
-	
+
 .fa-times-circle
 	display: block
 	position: absolute
@@ -46,6 +46,7 @@
 	input
 		width: 3em
 		height: 2em
+		line-height: 2em
 		border: none
 		border-radius: 10px
 		padding: 6px
