--- a/src/views/partials/LCPRO/slider.ejs
+++ b/src/views/partials/LCPRO/slider.ejs
@@ -3,7 +3,7 @@
 
   <div class="header-image__content-box js-showHeaderCaption">
     <figure>
-      <img class="header-image__logo-img" src="img/pro.png" alt="logo">
+      <img class="header-image__logo-img" src="img/PRO.png" alt="logo">
     </figure>
     <p class="text header-image__content-text m10">Produce large high resolution objects at a fraction of the cost of other 3d printers. </p>
     <button class="btn header-image__btn" data-id="<%= printer._id %>">Купить</button>
