--- a/src/views/partials/mainblock.ejs
+++ b/src/views/partials/mainblock.ejs
@@ -75,7 +75,7 @@
                 <%
                 let sprites = ['castable','flexible','firm','hard'];
                 for(var i=0; i<sprites.length; i++) {%>
-                  <li class="properties__item col-xs-2">
+                  <li class="properties__item col-xs-3 col-md-2">
 
                     <div class=" sprite-window">
                       <img class="spr spr-<%= sprites[i]%>" src="img/materialProp.png" alt="properties">
@@ -110,7 +110,7 @@
               <ul class="properties row">
                 <%
                 for(var i=0; i<sprites.length; i++) {%>
-                  <li class="properties__item col-xs-2">
+                  <li class="properties__item col-xs-3 col-md-2">
 
                     <div class=" sprite-window">
                       <img class="spr spr-<%= sprites[i]%>" src="img/materialProp.png" alt="properties">
